--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="background__container">
 
 
-        <figure class="layout__pictures">
+        <figure class="background__pictures">
 
             <img src="./imagenes/Untitled-3.png" alt="casco" class="casco">
 
