--- a/seccion1.html
+++ b/seccion1.html
@@ -40,12 +40,12 @@
                     <form class="contactoContainer">
                        <div class="izquierda">
                             <h2>Contacto</h2>
-                            <input type="text" placeholder="Tu nombre" class="fieldTile">
-                            <input type="text" placeholder="Tu email" class="fieldTile">
-                            <input type="text" placeholder="Telefono" class="fieldTile">
-                            <textarea placeholder="Mensaje" class="fieldTile"></textarea>
-                            <button class="botonContacto">Enviar</button>
-                        </div>
+                            <input type="text" id="tuNombre" placeholder="Tu nombre">
+                            <input type="text" id="tuEmail" placeholder="Tu email">
+                            <input type="text" id="tuTelefono" placeholder="Telefono">
+                            <textarea placeholder="Mensaje"></textarea>
+                            <input type="submit" id="enviarButton" value="Enviar">
+                        </div>    
                         <div class="derecha"></div>
                                                     
                        
