--- a/seccion2.html
+++ b/seccion2.html
@@ -37,10 +37,21 @@
                 <section class="main__london">
                     <div class="drinkContainer">
                     </div>
-                    <div class="textContainer">
-                        <h2>Quiénes somos</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni expedita sapiente est ullam dolore. Et, nesciunt facilis? Voluptate repellendus rerum culpa odit, veniam itaque optio perspiciatis, accusantium vitae non omnis!</p>
+                    <div class="imageContainer">
+                        <div class="textContainer">
+                            <h2>NOSOTROS</h2>
+                            <p>
+                                Somos Julian y Federico, un familiar de uno de nosotros soñó con desarrollar un producto único, innovador y distintivo. Así, a principios del 2020 nació Aquiles,
+                                un gin guerrero, una bebida con historia. Rápidamente, lograron un posicionamiento en el mercado, siempre apostando a alcanzar la máxima calidad en cada uno de los productos.
+                            </p>
+                            <p>    
+                                Actualmente se produce tres variedades: London Dry, Pink Hibiscus y Sauvignon Blanc.
+                                Hoy contamos con dos sedes, una en la ciudad de Cañada de Gómez y otra en Rosario, y esta familia continúa creciendo. Seguimos escribiendo la historia de este gin guerrero que
+                                tanto nos apasiona.
+                            </p>
+                        </div>
                     </div>
+                        
                 </section>
             </main>
     </div>
