--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 </figure>
                 
                 <ul class="nav__links">
-                    <li><a href="#seccion1" class="nav__link">Contacto</a></li>
-                    <li><a href="#seccion2" class="nav__link">Nosotros</a></li>
-                    <li><a href="#seccion3" class="nav__link">Cotizaciones</a></li>
+                    <li><a href="./seccion1.html" class="nav__link">Contacto</a></li>
+                    <li><a href="./seccion2.html" class="nav__link">Nosotros</a></li>
+                    <li><a href="./seccion3.html" class="nav__link">Cotizaciones</a></li>
                 </ul>
 
             </nav>
