--- a/Opcion 2/index.html
+++ b/Opcion 2/index.html
@@ -378,7 +378,7 @@
           
 
           <div class="footer__right">
-            <img src="/imagenes/copyright-regular-24.png" alt="" class="footer__img">
+            <img src="./imagenes/copyright-regular-24.png" alt="" class="footer__img">
             <a href="#" class="footer__link footer__link--2">Julian Benito</a>
             <a href="#" class="footer__link footer__link--2">Federico Coronel</a>
           </div>
