--- a/Sin animacion entrada/index.html
+++ b/Sin animacion entrada/index.html
@@ -21,17 +21,12 @@
 
   <div class="background__container">
 
-
     <figure class="background__pictures">
 
       <img src="./imagenes/Untitled-3.png" alt="casco" class="casco">
 
 
     </figure>
-
-
-
-
 
     <div class="hero__container">
 
@@ -377,7 +372,7 @@
 
           <div class="footer__left">
            <img src="./imagenes/instagram-logo-24.png" alt="" class="footer__img">
-           <a href="#" class="footer__link">Aquilesgin</a>
+           <a href="https://www.instagram.com/aquilesgin/?hl=es" target="_blank" class="footer__link">Aquilesgin</a>
           </div>
           
 
